*SVN*

* Fix Time#advance bug when trying to advance a year from leap day.  Closes #8655 [gbuesing]

* Add support for []= on ActiveSupport::Multibyte::Chars. Closes #9142. [ewan, manfred]

* Added Array#extract_options! to encapsulate the pattern of getting an options hash out of a variable number of parameters #8759 [norbert].

* Let alias_attribute work with attributes with initial capital letters (legacy columns etc).  Closes #8596 [mpalmer]

* Added Hash#except which is the inverse of Hash#slice -- return the hash except the keys that are specified [DHH]

* Added support for pluralization with a different starting letter than the singular version (cow/kine) #4929 [norri_b/hasmanyjosh]

* Demote Hash#to_xml to use XmlSimple#xml_in_string so it can't read files or stdin.  #8453 [candlerb, Jeremy Kemper]

* Backport clean_logger changes to support ruby 1.8.2 [mislav]

* Added proper handling of arrays #8537 [hasmanyjosh]

  Before:
    Hash.from_xml '<images></images>'
    # => {:images => nil}

    Hash.from_xml '<images><image>foo.jpg</image></images>'
    # => {:images => {:image => "foo.jpg"}}

    Hash.from_xml '<images><image>foo.jpg</image><image>bar.jpg</image></images>'
    # => {:images => {:image => ["foo.jpg", "bar.jpg"]}}

  After:
    Hash.from_xml '<images type="array"></images>'
    # => {:images => []}

    Hash.from_xml '<images type="array"><image>foo.jpg</image></images>'
    # => {:images => ["foo.jpg"]}

    Hash.from_xml '<images type="array"><image>foo.jpg</image><image>bar.jpg</image></images>'
    # => {:images => ["foo.jpg", "bar.jpg"]}

* Improve Time and Date test coverage.  #8646 [Josh Peek]

* Add Date#since, ago, beginning_of_day, and end_of_day. Date + seconds works now.  #8575 [Geoff Buesing]

* String#to_time overflows to DateTime. Add String#to_datetime.  #8572 [Geoff Buesing]

* Date.yesterday and .tomorrow.  #8571 [Geoff Buesing]

* Readable Date and DateTime#inspect.  #8570 [Geoff Buesing]
